Crash in [@ @0x0 | mozilla::gl::GLContextEGL::~GLContextEGL]
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox78 | --- | unaffected |
| firefox79 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | fixed |
People
(Reporter: gsvelto, Assigned: kvark)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-d7723ac5-78ab-4cd2-8d00-96c420200801.
Top 10 frames of crashing thread:
0 @0x0
1 xul.dll mozilla::gl::GLContextEGL::~GLContextEGL gfx/gl/GLContextProviderEGL.cpp:404
2 xul.dll mozilla::gl::GLContextEGL::~GLContextEGL gfx/gl/GLContextProviderEGL.cpp:391
3 xul.dll mozilla::wr::RenderDXGITextureHostOGL::~RenderDXGITextureHostOGL gfx/webrender_bindings/RenderD3D11TextureHostOGL.cpp:41
4 xul.dll mozilla::wr::RenderDXGITextureHostOGL::~RenderDXGITextureHostOGL gfx/webrender_bindings/RenderD3D11TextureHostOGL.cpp:38
5 xul.dll std::list<RefPtr<mozilla::wr::RenderTextureHost>, std::allocator<RefPtr<mozilla::wr::RenderTextureHost> > >::clear vs2017_15.8.4/VC/include/list:1393
6 xul.dll mozilla::wr::RenderThread::DeferredRenderTextureHostDestroy gfx/webrender_bindings/RenderThread.cpp:760
7 xul.dll mozilla::detail::RunnableMethodImpl< xpcom/threads/nsThreadUtils.h:1240
8 xul.dll MessageLoop::DoWork ipc/chromium/src/base/message_loop.cc:548
9 xul.dll base::MessagePumpDefault::Run ipc/chromium/src/base/message_pump_default.cc:35
This started in builid 20200729094932. It seems like we're jumping into a NULL pointer, possibly the fDestroyContext function pointer is NULL.
Comment 1•5 years ago
•
|
||
GraphicsCriticalError |[G0][GFX1-]: [D3D11] 2 CreateTexture2D failure Size: Size(310,174)texture11: false Code: 0x887a0005 (t=20383.4) |[G466][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22782.9) |[G452][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22781.7) |[G453][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22781.8) |[G454][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22781.8) |[G455][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22782) |[G456][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22782) |[G457][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22782.2) |[G458][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22782.2) |[G459][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22782.3) |[G460][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22782.3) |[G461][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22782.5) |[G462][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22782.5) |[G463][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22782.8) |[G464][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22782.8) |[G465][GFX1-]: RenderDXGITextureHostOGL Failed to open shared texture, hr=0x80070057 (t=22782.9)
Commits between 20200728213249 and 20200729094932 (first bad):
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=7b8c4f32cdde947c1b1f942905fbc5039b6d1c65&tochange=3059084abf6e9e96f9f1a80997da2139b0f5afee
This looks related:
0067bb1fb8e45078f4383c9e371dd1c7eafbffbe Dzmitry Malyshau — Bug 1652972 - Mark EGL context as lost on Shutdown() r=aosmond
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
This probably doesn't matter, as the changes will be rolled back by
https://phabricator.services.mozilla.com/D85496
But the change should fix the crash anyway, for now.
Updated•5 years ago
|
Comment 5•5 years ago
|
||
| bugherder | ||
Description
•