Bug 1656853 - Check for EGL context to be alive on destruction r=aosmond,jgilbert

This probably doesn't matter, as the changes will be rolled back by
https://phabricator.services.mozilla.com/D85496
But the change should fix the crash anyway, for now.

Differential Revision: https://phabricator.services.mozilla.com/D86069